--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="..\starter-code\css\main.css" type="text/css">
+
 </head>
+
 <body>
-  Instagram
+    <div>
 
-  Capture and Share the World's Moments
+        <div class="firsdiv">
+            <img class="phones" src="..\starter-code\images\phones.png" alt="">
+            <div class="block">
+                <img class="logo" src="..\starter-code\images\brand.png" alt="">
+                <div class="login"><img id="home" src="..\starter-code\images\home.png" alt=""><a class="home">Log in</a></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+        </div>
+        <div class="square" style=" background-image: url(..\starter-code\images\frame.png)">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <h2 class="a">Instagram Capture and Share the World's Moments</h2> Instagram is a fast, beautiful and fun way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br> Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play
+            <div><img src="..\starter-code\images\badge-android.png" alt=""><img src="..\starter-code\images\badge-iphone.png" alt=""></div>
+        </div>
+    </div>
 
-  &copy; 2014 Instagram
+
+    <footer>
+        <div class="foot"> About Us Support Blog Press AP I Jobs Privacy
+            <span class="f"> Terms copy 2014 Instagram</span>
+        </div>
+    </footer>
 </body>
+
 </html>
