Entrega final clone de instagram CSS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header"></div>
+  <div class="middle">
+    <div class="main-content">
+      <div class="container-phone">
+        <img src="images/phones.png">
+      </div>
+      <div class="container-right-menu">
+        <div class="right-menu-header">
+          <div class="logo-container">
+            <img src="images/brand.png">
+          </div>
+          <div class="login-container">
+            <div class="home-image">
+              <img src="images/home.png">
+            </div>
+            <div class="login-text">Log in</div>
+          </div>
+        </div>
+        <div class="right-menu-body">
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+        <div class="right-menu-footer">
+          <div class="appleStore-logo-container">
+            <img src="images/badge-iphone.png">
+          </div>
+          <div class="googleStore-logo-container">
+            <img src="images/badge-android.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">About Us</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Support</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Blog</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Press</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">API</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Jobs</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Privacy</a></span>
+    <span><a href="https://github.com/mpalatsig/lab-css-instagram-clone">Terms</a></span>
+    <span1>&copy; 2014 Instagram</span1>
+  </div>
 </body>
 </html>
