--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram Clone!</title>
+    <link rel = "stylesheet" type = "text/css" href = "css/main.css">
 </head>
 <body>
-  Instagram
+    <div id ="uppersection" class = "lightblueback"> </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img id = "phones" src = "images/phones.png" alt = "image of phones">
 
-  Oh yeah, did we mention it's free?
+    <button id ="login" class = "evenlighterblueback">
+        <img id = "homelogo" src = "images/home.png" alt = "home logo">
+        <span class = "button_desc whitefont">Log in</span>
+    </button>
 
-  Download on the App Store
-  Get it on Google Play
+    <img id = "brandtitle" src = "images/brand.png" alt = "brand image of insta">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div id = "descriptionbox" class = "whiteback">
 
-  &copy; 2014 Instagram
+      <h1 class = "bluefont">Capture and Share<br>the World's Moments</h1>
+
+      <p class = "justify">Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+      <p class = "justify">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p class = "justify">Oh yeah, did we mention it's free?</p>
+
+      <img class = "appicon" src = "images/badge-iphone.png">
+      <img class = "appicon" src = "images/badge-android.png">
+
+    </div>
+
+<!-- NAVIGATION ------------------->
+    <nav id = "navbar">
+    <ul>
+        <li><a href="/aboutus">ABOUS US</a></li>
+        <li><a href="/support">SUPPORT</a></li>
+        <li><a href="/blog">BLOG</a></li>
+        <li><a href="/press">PRESS</a></li>
+        <li><a href="/api">API</a></li>
+        <li><a href="/jobs">JOBS</a></li>
+        <li><a href="/privacy">PRIVACY</a></li>
+        <li><a href="/terms  ">TERMS</a></li>
+        <li>&copy; 2014 Instagram</li>
+    </ul>
+    </nav>
+
+
+
 </body>
 </html>
