--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 </head>
 <body>
-  Instagram
+  <div class="first-blue">
+      <img src="images/phones.png" class="phones" alt="smartphones picture"  />
+      <img src="images/brand.png" class="instalogo" alt="instagram logo"  />
+      <img src="images/frame.png" class="frame" alt="white rounded frame"  />
 
-  Capture and Share the World's Moments
+      <div class="button">
+        <img class="home" src="images/home.png" alt="home image"  height="30"/>
+        <p class="login"> Log in </p>
+        </div>
+        <h1 class="title">Capture and Share </br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p class="first-p">Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p class="second-p">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="third-p">Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <img src="images/badge-iphone.png" class="apple" alt="download it on apple devices"  />
+        <img src="images/badge-android.png" class="android" alt="download it on android devices"  />
 
-  Oh yeah, did we mention it's free?
+        <nav>
+          <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span>&copy; 2014 Instagram</span></li>
 
-  Download on the App Store
-  Get it on Google Play
+        </ul>
+        </nav>
+        </div>
+  <div class="second-white">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
