instagram clone Ferrodri

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blueBackground">
 
-  Capture and Share the World's Moments
+    <div class="mainClass">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="phone">
+          <img src="./images/phones.png">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="mainSquare">
 
-  Oh yeah, did we mention it's free?
+          <div class="logo">
+            <img src="./images/brand.png">
+          </div>
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="home">
+            <img src="./images/home.png"> Log in
+          </div>
 
+          <div class="text">
+
+            <p>
+              <h1> Capture and Share the World's Moments
+              </h1>
+
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+
+            </p>
+            <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+            Oh yeah, did we mention it's free?
+            </p>
+
+            <div class="appImages">
+              <img src="./images/badge-iphone.png">
+              <img class="android" src="./images/badge-android.png">
+            </div>
+
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <footer>
   About Us
   Support
   Blog
@@ -25,7 +58,11 @@
   Jobs
   Privacy
   Terms
-
+    <div class="copyright">
   &copy; 2014 Instagram
+    </div>
+  </footer>
+
+  </div>
 </body>
 </html>
