done, not responsive

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,10 +22,17 @@
           </button>
         </div>
         <div class="text-content-box">
-          <h2>Capture and Share the World's Moments</h2>
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <h2 class="text-content-h2">Capture and Share</h2>
+          <h2 class="text-content-h2-2nd">the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
+          <p class="text-content-p-3">Oh yeah, did we mention it's free?</p>
+          <figure class="figure-appstore">
+            <img src="../starter-code/images/badge-iphone.png" alt="" width="164">
+          </figure>
+          <figure class="figure-android">
+            <img src="../starter-code/images/badge-android.png" alt="" width="153">
+          </figure>
         </div>
       </div>
     </div>
