--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel = "stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  <section id="main">
+  <section class="wrapper" id="main">
     <div class="upper-blue">
     </div>
     <div class="bottom-white">
@@ -35,7 +35,7 @@
   </section>
 
   
-  <footer>
+  <footer class="footer">
     <ul class="footer-links">
       <li>About Us</li>
       <li>Support</li>
@@ -46,7 +46,6 @@
       <li>Privacy</li>
       <li>Terms</li>
     </ul>
-  &copy; 2014 Instagram
   </footer>
 </body>
 </html>
