--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "content">
+    <div class = "top">
+      <img class = "brand" src = "images/brand.png">
+      <button class = "button">  <img src = "images/home.png"> Log in</button>
+    </div>
 
-  Capture and Share the World's Moments
+    <img class = "phone" src = "images/phones.png">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class= " main_block">
+      <h3>Capture and Share<br> the World's Moments</h3>
+    <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life<br> with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
+    Oh yeah, did we mention it's free?<br></p>
+  </div>
+    <img class = "app-store" src = "images/badge-iphone.png">
+    <img class = "google-play"src = "images/badge-android.png">
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <a>About Us</a>
+    <a>Support</a>
+    <a>Blog</a>
+    <a>Press</a>
+    <a>API</a>
+    <a>Jobs</a>
+    <a>Privacy</a>
+    <a>Terms</a>
+    <div class = "copyright">
+      &copy; 2014 Instagram
+    </div
+  </div>
 </body>
 </html>
