--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="instagram">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-side">
+      <img class="phones" src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-side">
+      <img class="brand" src="images/brand.png">
 
-  Oh yeah, did we mention it's free?
+      <div class="login-button">
+        <button>
+          <img src="images/home.png">
+          <span class="button-text">
+            Log in
+          </span>
+        </button>
+      </div>
+      <br>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="content-box">
+        <img class="frame" src="images/frame.png">
+        <div class="text-header">
+          Capture and Share the World's Moments
+          <br>
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="text">
+          <span>
+          Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br>
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          <br>
+          Oh yeah, did we mention it's free?
+        </span>
+        </div>
+        <br>
+      </div>
 
-  &copy; 2014 Instagram
+      <div class="banners">
+        <img class="appStore" src="images/badge-iphone.png">
+        <img class="googlePlay" src="images/badge-android.png">
+      </div>
+
+  </div>
+
+
+  <div class="footer">
+    <span class="aboutUs">
+      ABOUT US
+    </span>
+    <span class="support">
+      SUPPORT
+    </span>
+    <span class="blog">
+      BLOG
+    </span>
+    <span class="press">
+      PRESS
+    </span>
+    <span class="api">
+      API
+    </span>
+    <span class="jobs">
+      JOBS
+    </span>
+    <span class="privacy">
+      PRIVACY
+    </span>
+    <span class="terms">
+      TERMS
+    </span>
+    <span class="copyright">
+      &copy; 2014 INSTAGRAM
+    </span>
+  </div>
+
+
+
+
+  </div>
+
 </body>
 </html>
