--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-box"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img class="phones" src="./images/phones.png" alt="">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img class="brand" src="./images/brand.png" alt="">
 
-  Oh yeah, did we mention it's free?
+  <div class="log-in">
+    <img class="adjust-log-in" src="./images/home.png" alt="">
+    <a id="log-in-link" class="adjust-log-in">Log in</a>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="frame" src="./images/frame.png" alt="">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="frameText">
+    <h3>Capture and Share the World's Moments</h3>
 
-  &copy; 2014 Instagram
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+
+
+    <img id="badge-iphone" src="./images/badge-iphone.png" alt="">
+    <img id="badge-android" src="./images/badge-android.png" alt="">
+
+  </div>
+
+  <nav id="nav">
+    <ul>
+      <a>ABOUT US</a>
+      <a>SUPPORT</a>
+      <a>BLOG</a>
+      <a>PRESS</a>
+      <a>API</a>
+      <a>JOBS</a>
+      <a>PRIVACY</a>
+      <a>TERMS</a>
+      <a>&copy; 2014 Instagram</a>
+    </ul>
+  </nav>
+
 </body>
 </html>
