--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="right-side">
+      <div class="up-right-side">
       <img class="brand" src="images/brand.png">
 
       <div class="login-button">
@@ -27,9 +28,10 @@
         </button>
       </div>
       <br>
+    </div>
+    <div class="low-right-side">
 
-      <div class="content-box">
-        <img class="frame" src="images/frame.png">
+        <div class="frame">
         <div class="text-header">
           Capture and Share the World's Moments
           <br>
@@ -48,6 +50,8 @@
         </div>
         <br>
       </div>
+
+    </div>
 
       <div class="banners">
         <img class="appStore" src="images/badge-iphone.png">
