--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="blue-background">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="site-information clearfix">
+    <div class="phone-container">
+      <img class= "phone-image"src="images/phones.png" alt="Phones" />
+    </div>
+    <div class="welcome-message">
+      <div class="header-logo clearfix">
+        <img class="insta-logo" src="images/brand.png" alt="" />
+        <button class="log-in-button">
+          <img class="home-logo" src="images/home.png" alt="Home" />
+          <div class="log-in-text">Log in</div>
+        </button>
+      </div>
+      <div class="text-container">
+        <div class="title box">
+            Capture and Share the World's Moments
+        </div>
+        <div class="text box">
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Oh yeah, did we mention it's free?
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="get-app box">
+          <img class= "download"src="images/badge-iphone.png" alt="Download in apple store" />
+          <img src="images/badge-android.png" alt="Download in Google Play"/>
+        </div>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+    <ul class="footer">
+        <span class="separate-words">About Us</span>
+        <span class="separate-words">Support</span>
+        <span class="separate-words">Blog</span>
+        <span class="separate-words">Press </span>
+        <span class="separate-words">API </span>
+        <span class="separate-words">Jobs </span>
+        <span class="separate-words">Privacy </span>
+        <span class="separate-words">Terms </span>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <span class="signature"> &copy; 2014 Instagram</span>
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+
+
 </body>
 </html>
