done, but need feedback

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css"/>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class = "grad head-container">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="images/phones.png" id="phones" alt="phones">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img src="images/brand.png" id="brand" alt="brand">
+  <button id="login" class = "grad">
+    <img src="images/home.png" id="home" alt="home">
+    <span id = "logtext">Log in</span>
+  </button>
 
-  Oh yeah, did we mention it's free?
+    <img src="images/frame.png" id="frame" alt="frame">
 
-  Download on the App Store
-  Get it on Google Play
+  <div class = "flex-container">
+    <h1>Capture and Share <br> the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
-</body>
+    <img src="images/badge-iphone.png" id="iphone" alt="iphone">
+    <img src="images/badge-android.png" id="android" alt="android">
+  </div>
+
+
+      <div class = "footer-container">
+        <uo>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span>&copy; 2014 Instagram</span></li>
+        </uo>
+      </div>
+
+  </body>
+
 </html>
