--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,21 +7,29 @@
 <body>
 
 <section id="top">
-  <img id="phones" src="images/phones.png">
-  <a href="#" target="_blank" id="login-button">
-      <img src="images/home.png">
-      <h3>Log in</h3>
-  </a>
-  <img id="brand" src="images/brand.png">
-  <div id="content-box">
-    <h2>Capture and Share the World's Moments</h2>
-    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+  <div id="main-container">
+    <img id="phones" src="images/phones.png">
+    <div id="right-container">
+      <div id="top-row">
+        <img id="brand" src="images/brand.png">
+        <a href="#" target="_blank" id="login-button">
+            <img src="images/home.png">
+            <h3>Log in</h3>
+        </a>
+      </div>
+      <div id="content-box">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-      Oh yeah, did we mention it's free?</p>
-    <a href="#" target="_blank" class="download-badge"><img src="images/badge-android.png"></a>
-    <a href="#" target="_blank" class="download-badge"><img src="images/badge-iphone.png"></a>
+            Oh yeah, did we mention it's free?</p>
+        <div id="download-row">
+          <a href="#" target="_blank" class="download-badge"><img src="images/badge-android.png"></a>
+          <a href="#" target="_blank" class="download-badge"><img src="images/badge-iphone.png"></a>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
