--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href ="index.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="blueBackground">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phone">
+  <img src = "phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="instagram">
+<img src="brand.png">
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="loginButton">
+<img src="home.png">
+Log In
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="mainText">
 
-  About Us
+    <h2>Capture and Share the World's Moments</h2>
+
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p><br>
+
+    <p>Take a picture or video, choose a filter to transform its look and feel,
+    then post to Instagram &mdash; it's that easy. You can even share to
+    Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p><br>
+
+    <p>Oh yeah, did we mention it's free?</p>
+
+    <div class="badge">
+    <img src="badge-android.png">
+    </div>
+
+    <div class="badge">
+  <img src="badge-iphone.png">
+    </div>
+
+  </div>
+
+
+<footer>
+  <div class="mention"><strong>About Us
   Support
   Blog
   Press
   API
   Jobs
   Privacy
-  Terms
+  Terms</strong>
+   &copy; 2014 Instagram</div>
 
-  &copy; 2014 Instagram
+
+</footer>
+
 </body>
 </html>
