my best attempt at the Instagram Clone. -Salvatore

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"
+  type="text/css"
+  href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <div class="background-blue">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="major">
+<div class="left-box">
+  <div class="phones">
+  <img src="images/phones.png" alt="ERROR ERROR!"></img>
+</div>
+</div>
+<div class="right-box">
+  <div class="top-right">
+    <span class="brand"><img src="images/brand.png" alt="brand image"></img></span>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <span class="login">
+    <div class="home">
+      <img src="images/home.png" alt="image not found"></img>
+    </span>
+    <span class="login-text">Log in
+    </span>
+  </div>
+</div>
+<div class="text">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
+</div class="apps">
 
-  About Us
+<span class="iphone"><img src="images/badge-iphone.png"></img> </span>
+<span class="android"><img src="images/badge-android.png"></img></span>
+
+</div>
+</div>
+<div class="footer">  <b>
+  <p style="color:darkblue">About Us
   Support
   Blog
   Press
@@ -25,7 +52,7 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+  2014 Instagram</b>
+</div>
 </body>
 </html>
