--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
-<!DOCTYPE html>
 <html lang="en">
+<link rel = "stylesheet"
+   type = "text/css"
+   href = "main.css" />
 <head>
   <title>Instagram</title>
 </head>
+
+
 <body>
-  Instagram
+  <div class="blue-bg">
+    <div class="main-title">
+      <img src="brand.png" alt="brand" class="main-title" width="245px" height="61px">
+      <button class="button"><img src="home.png" alt="login" class="login" width=18px height=14px><b>Log in</b></button>
+    </div>
+    <div class="iphone">
+      <img src="phones.png" alt="iphones">
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="right-col">
+  <div class="content-container">
+    <h3 class="content-title">Capture and Share <br>the World's Moments</h3>
+    <p class="content">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+     <p class="content">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p class="content">Oh yeah, did we mention it's free?</p>
+      <img src="badge-iphone.png" alt="appStore" class="download" id="apple">
+      <img src="badge-android.png" alt="google" class="download" id="android">
+  </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <footer class="footer">
+      <b>About Us &nbsp; &nbsp;
+      Support &nbsp; &nbsp;
+      Blog &nbsp; &nbsp;
+      Press &nbsp; &nbsp;
+      API &nbsp; &nbsp;
+      Jobs &nbsp; &nbsp;
+      Privacy &nbsp; &nbsp;
+      Terms &nbsp; &nbsp;</b>
+      &nbsp;
+      <div class="copy"> &copy; 2014 Instagram</footer> </div>
 
-  &copy; 2014 Instagram
 </body>
 </html>
