--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <link rel="stylesheet" href="css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="blueBackground">
+  </div>
 
-  Capture and Share the World's Moments
+<div class="Container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="Phones">
+    <img src="images/phones.png" alt="Image Tel">
+  </div>
+  
+  <div class="sideContent">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <header>
+    <img src="images/brand.png" alt="BRAND">
+    <div class="logIn">
+      <img src="images/home.png" alt="BRAND">
+      <span>Log in</span>
+    </div>
+  </header>
 
-  Oh yeah, did we mention it's free?
+  <div class="description">
 
-  Download on the App Store
-  Get it on Google Play
+    <h2>Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class="AppStores">
+        <img src="images/badge-iphone.png" alt="BRAND">
+        <img src="images/badge-android.png" alt="BRAND">
+    </div>
+  </div>
+  </div>
+</div>
 
-  &copy; 2014 Instagram
 </body>
+
+<footer>
+<span class="Links">
+  <a href="">Us</a>
+  <a href="">Support</a>
+  <a href="">Blog</a>
+  <a href="">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Terms</a>
+</span>
+<span class="Copyright">
+  &copy; 2014 Instagram
+</span>
+</footer>
+
 </html>
