--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,29 +3,64 @@
 <head>
   <title>Instagram</title>
 </head>
+
+<link rel="stylesheet" type="text/css" href="css/main.css">
+
+<div class="blueBox">
+</div>
+
+<div class="frame">
+<img scr="images/frame.png">
+</div>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="homeBox"
+  Log in
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class ="phones">
+   <img src="images/phones.png">
+ </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class ="igLogo">
+   <img src="images/brand.png">
+ </div>
 
-  Oh yeah, did we mention it's free?
+ <div class="homeLogo">
+  <img src="images/home.png">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="intro">
+<div><b>Capture and Share</b></div>
+<div><b>the World's Moments</b></div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <div class="mainText">
+  <div>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</div>
+
+  <div>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</div>
+
+  <div>Oh yeah, did we mention it's free?</div>
+  </div>
+
+  <div class="appleLogo">
+   <img src="images/badge-iphone.png">
+ </div>
+
+ <div class="playstoreLogo">
+  <img src="images/badge-android.png">
+</div>
+
+  <div class="copyright">
+    &copy; 2014 Instagram
+  </div>
+
 </body>
+
+<div class="links">
+About Us   Support    Blog    Press    API    Jobs    Privacy    Terms
+</div>
+
 </html>
