--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" href = "css/main.css">
 </head>
-<body>
-  Instagram
+      <body>
+        <div class = "bckgrnd">
+        </div>
 
-  Capture and Share the World's Moments
+        <img class = "phones" src="images/phones.png" alt="App Store">
+        <img class = "instaLogo" src="images/brand.png" alt"Instagram">
+        <div class = "logs">
+        <img class = "login" src="images/home.png" alt"Log In">
+        <strong>Log in</strong>
+        </div>
+        <div class = "container" >
+        <h1>  Capture and Share <br> the World's Moments </h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Instagram is a <strong> fast </strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.
 
-  Oh yeah, did we mention it's free?
+        Oh yeah, did we mention it's free? <br> <br>
+          <div class "appStore">
+          <img src="images/badge-iphone.png" alt="App Store">
+          <img src="images/badge-android.png" alt="Android Store">
+          </div>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class = "links">
+          ABOUT
+          SUPPORT
+          BLOG
+          PRESS
+          API
+          JOBS
+          PRIVACY
+          TERMS
+          <!--<div class = "cpyRight">-->
+          <span>&copy; 2014 Instagram</span>
+        <!--</div>-->
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <img class = "frame" src="images/frame.png">
 
-  &copy; 2014 Instagram
-</body>
+      </body>
 </html>
