--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<img class="phonesPng" src="images/phones.png" alt="">
+<img class="brandPng" src="images/brand.png" alt="">
+<button class="button">
+</button>
+<div class="logIn">
+  Log in
+</div>
+<img class="homePng" src="images/home.png" alt="">
+<img class="framePic" src="images/frame.png" alt="">
+<div class="captureText">
+  <strong>Capture and Share the World's Moments</strong>
+</div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
+<div class="context">
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+<br>
+<br>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+<br>
+<br>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+<img class="badgeiPhone" src="images/badge-iphone.png" alt="">
+<img class="badgeAndroid" src="images/badge-android.png" alt="">
+<nav class="bottomNav">
+        <a href="about.html">About Us</a>
+        <a href="support.html">Support</a>
+        <a href="blog.html">Blog</a>
+        <a href="press.html">Press</a>
+        <a href="api.html">API</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+          &copy; 2014 Instagram
+      </nav>
 </body>
 </html>
