--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="main-images">
+    <img class="phones-image" src="images/phones.png">
+    <img class="instagram-logo" src="images/brand.png">
+    <div class="home-button">
+      <img src="images/home.png">
+      <span>Log in</span>
+    </div>
+    <div class="text-box">
+      <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
 
-  Oh yeah, did we mention it's free?
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bottom-text">
+    <span>
+      ABOUT US
+      SUPPORT
+      BLOG
+      PRESS
+      API
+      JOBS
+      PRIVACY
+      TERMS
+      <b>&copy; 2014 INSTAGRAM</b>
+    </span>
+  </div>
 </body>
 </html>
