--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class = "centerContainer">
+    <div class = "phonesImage">
+      <img src = "images/phones.png">
+    </div>
+    <div class = "logoLogin">
+      <img src = "images/brand.png">
+      <div = "loginButton">
+      </div>
+    </div>
+    <div class = "infoContent">
+        <h2 class = "header">Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
+    </div>
+  </div>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
 
-  Oh yeah, did we mention it's free?
+    &copy; 2014 Instagram
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
