--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<img class="instagramLogo" src="./images/brand.png" alt=""> <button class="logIn" type="button" name="button"> <img src="./images/home.png" alt="">log in</button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <div class="boxW">
+
+        <p class="slogan">  Capture and Share the World's Moments</p>
+        <p class= "text">Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+
+
+      <img class="googlePlay" src="./images/badge-android.png" alt="">
+      <img  class="appleStore"src="./images/badge-iphone.png" alt="">
+
+      </div>
+
+
+      <div class="phones">
+        <img src="./images/phones.png" alt="">
+          </div>
+
+            <ul class="footer">
+  <li><a href="default.asp">About Us</a></li>
+  <li><a href="news.asp">Support</a></li>
+  <li><a href="contact.asp">Blog</a></li>
+  <li><a href="about.asp">API</a></li>
+  <li><a href="about.asp">Jobs</a></li>
+  <li><a href="about.asp">Press</a></li>
+  <li><a href="about.asp">Privacy</a></li>
+  <li><a href="about.asp">Terms</a></li>
+</ul>
+
+
+&copy; 2014 Instagram
 </body>
 </html>
